--- a/public/html/login_page.html
+++ b/public/html/login_page.html
@@ -1,7 +1,8 @@
 <h1>Morzo</h1>
 
 <form id="login">
-	<input type="hidden" name="func" value="login_password" />
+	<input type="hidden" name="model" value="user" />
+	<input type="hidden" name="method" value="login_password" />
 	<label for="username">Username</label>
 	<input type="text" name="username" />
 	<br/>
