Created base for desktop system. Added account creation and working login/logout on site.

--- a/public/html/login_page.html
+++ b/public/html/login_page.html
@@ -11,3 +11,14 @@
 	<br/>
 	<input type="submit" value="login" />
 </form>
+<form id="create_account">
+	<input type="hidden" name="model" value="user" />
+	<input type="hidden" name="method" value="create_user" />
+	<label for="username">Username</label>
+	<input type="text" name="username" />
+	<br/>
+	<label for="password">Password</label>
+	<input type="password" name="password" />
+	<br/>
+	<input type="submit" value="create account" />
+</form>
