--- a/public/html/desktop.html
+++ b/public/html/desktop.html
@@ -2,5 +2,6 @@
 <input id="add" type="button" value="Add" />
 <input id="disablesort" type="button" value="disablesort" />
 <input id="enablesort" type="button" value="enablesort" />
+<input id="mapgenerator" type="button" value="Map generator" />
 <div class="flex-container">
 </div>
