Made 2D projection. Started on voronoi and relaxation

--- a/public/html/gltest.html
+++ b/public/html/gltest.html
@@ -3,6 +3,7 @@
 	<script src="/js/gl-matrix-min.js"></script>
 	<script src="/js/common.js"></script>
 	<script src="/js/mapgenerator/mersenne-twister.js"></script>
+	<script src="/js/mapgenerator/rhill-voronoi-core.min.js"></script>
 	<script src="/js/mapgenerator.js"></script>
 	<script>
 		$(function() {
