--- a/public/html/gltest.html
+++ b/public/html/gltest.html
@@ -4,6 +4,7 @@
 	<script src="/js/common.js"></script>
 	<script src="/js/mapgenerator/mersenne-twister.js"></script>
 	<script src="/js/mapgenerator/rhill-voronoi-core.min.js"></script>
+	<script src="/js/mapgenerator/structure.js"></script>
 	<script src="/js/mapgenerator.js"></script>
 	<script>
 		$(function() {
